--- a/app/components/sorting.module.scss
+++ b/app/components/sorting.module.scss
@@ -11,16 +11,16 @@
     justify-content: space-evenly;
     align-items: center;
   }
-  .zoneDiv {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 50px;
-    gap: 50px;
-    margin-bottom: 26%;
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  // .zoneDiv {
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: space-between;
+  //   align-items: center;
+  //   margin-top: 50px;
+  //   gap: 50px;
+  //   margin-bottom: 26%;
+  //   max-width: 400px;
+  //   margin-left: auto;
+  //   margin-right: auto;
+  // }
 }
