--- a/app/components/sorting.module.scss
+++ b/app/components/sorting.module.scss
@@ -1,7 +1,6 @@
 .main {
   display: flex;
   flex-direction: column;
-
   .title {
     display: flex;
     align-self: center;
@@ -11,16 +10,23 @@
     justify-content: space-evenly;
     align-items: center;
   }
-  // .zoneDiv {
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: space-between;
-  //   align-items: center;
-  //   margin-top: 50px;
-  //   gap: 50px;
-  //   margin-bottom: 26%;
-  //   max-width: 400px;
-  //   margin-left: auto;
-  //   margin-right: auto;
-  // }
+  .titleCenter {
+    display: flex;
+    align-self: center;
+    margin-top: 10rem;
+    width: 400px;
+    font-size: 50px;
+  }
+  .titleSorting {
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+    &:hover {
+      transform: scale(1.2);
+    }
+    .displayChoiceDiv {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+  }
 }
