added header and changed desktop styling slightly

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -7,8 +7,8 @@
   .introDiv {
     display: flex;
     background-image: url("../public/classic-login.jpg");
-    background-position: 35%;
-    background-size: 900px;
+    background-position: 30%;
+    background-size: 700px;
     background-repeat: no-repeat;
     color: black;
     justify-content: center;
@@ -19,8 +19,8 @@
     margin-top: 20px;
     border-radius: 4px;
     .titleText {
-      font-size: 39px;
-      margin-left: 30%;
+      font-size: 35px;
+      margin-left: 32%;
     }
   }
   .descriptionDiv {
@@ -37,6 +37,26 @@
     align-items: center;
     & :hover {
       transform: scale(1.07);
+    }
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .main {
+    .introDiv {
+      width: 60%;
+      height: 30rem;
+      background-size: 100%;
+      .titleText {
+        font-size: 60px;
+        margin-left: 60px;
+        max-width: 400px;
+      }
+    }
+    .descriptionDiv {
+      display: flex;
+      flex-direction: row;
+      width: 700px;
     }
   }
 }
