--- a/app/components/runes.module.scss
+++ b/app/components/runes.module.scss
@@ -17,3 +17,13 @@
     }
   }
 }
+
+@media only screen and (min-width: 1000px) {
+  .main {
+    .runesDiv {
+      max-width: 1000px;
+      text-align: center;
+      font-size: 18px;
+    }
+  }
+}
