--- a/app/components/zone.module.scss
+++ b/app/components/zone.module.scss
@@ -15,3 +15,13 @@
     margin-right: auto;
   }
 }
+
+@media only screen and (min-width: 1000px) {
+  .main {
+    .zoneDiv {
+      max-width: 1000px;
+      text-align: center;
+      font-size: 18px;
+    }
+  }
+}
